# wavLibCpp

./: CMakeLists.txt  README.md  library.json
examples/BasicExample/: main.cpp
include/: wav.h
src/: wav.c  wav.cpp
